# api-router

./: .env.example  .gitignore  ANTHROPIC.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  CHANGELOG.md  CHANGELOG_ANTHROPIC.md  CHANGELOG_SENTRY.md  CHANGES.md  CLAUDE.md  COMMIT_MESSAGE.txt  COVERAGE.md  Cargo.toml  Cargo.toml.async-executor  DEPENDENCY_AUDIT.md  IMPLEMENTATION_SUMMARY.md  METRICS.md  OPTIMIZATION_RESULTS.md  README.md  RUNTIME_ANALYSIS.md  SENTRY.md  STREAMING.md  TESTING_AND_COVERAGE.md  TEST_COVERAGE_SUMMARY.md  TICKET_SUMMARY.md  TOKIO_DEPENDENCY_AUDIT.md  TRACING.md  UNIT_TEST_ADDITIONS.md  dependency_tree.txt  lightweight_approach.md  run_coverage.sh  tarpaulin.toml  test_anthropic.sh  test_api.sh  test_metrics.sh  test_ollama.sh
.github/: RUNTIME_DECISION.md
.github/workflows/: rust.yml
benchmarks/: README.md  benchmark.sh  connection_pool_bench.sh  simple_bench.sh
docs/: README.md  ollama支持.md  openapi.yaml  render_openapi.sh  中文化工作总结.md  任务完成记录.md  实现总结.md  日志追踪.md  测试总结.md  运行时评估.md  连接池总结.md  连接池设计.md  错误追踪.md
src/: config.rs  error_tracking.rs  errors.rs  handlers.rs  http_client.rs  lib.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  tracing_tests.rs  tracing_util.rs  url_parser.rs
src/handlers/: mod.rs  parser.rs  plan.rs  response.rs  router.rs  routes.rs  tests.rs
tests/: connection_pool_test.rs  error_tracking_integration.rs  integration.rs  metrics_test.rs  streaming_tests.rs
tests/common/: fixtures.rs  http.rs  mock_provider.rs  mod.rs  router.rs  utils.rs
transformer/: README.md  anthropic.json  cohere.json  gemini.json  generic.js  generic.json  ollama-cloud.json  ollama-local.json  openai.js  openai.json  qwen.js  qwen.json
