[package]
name = "api-router"
version = "0.1.0"
edition = "2021"

[dependencies]
smol = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
url = { version = "2.0", default-features = false }
async-tls = "0.12"
rustls = "0.20"
webpki-roots = "0.22"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
dashmap = "5"
once_cell = "1.19"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3"
