[package]
name = "api-router"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-router"
path = "src/main.rs"

[lib]
name = "api_router"
path = "src/lib.rs"

[dependencies]
smol = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
url = { version = "2.0", default-features = false }
async-tls = "0.12"
rustls = "0.20"
webpki-roots = "0.22"
thiserror = "1"
dashmap = "5"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
prometheus = { version = "0.13", default-features = false }
lazy_static = "1.4"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "rustls"] }
sentry-tracing = "0.34"
async-channel = "2"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3"
tracing-test = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
